W9/IntroToArcpy/GpMessages/12461669471800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Wednesday, March 27, 2024 1:50:47 PM</msg><msg code="-2147467259" type="100">  File "C:\courses\spa\W9\IntroToArcpy\StartingArcGISToolBox.atbx\SimpleTool.tool\tool.script.execute.py", line 12
    #arcpy.SetParameterAsText(2, "Result")
                                          ^
SyntaxError: unexpected EOF while parsing
</msg><msg code="0" type="0">Failed script Simple Tool...</msg><msg code="-2147467259" type="100">Failed to execute (SimpleTool).</msg><msg code="0" type="3">Failed at Wednesday, March 27, 2024 1:50:47 PM (Elapsed Time: 0.04 seconds)</msg></messages>